--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-APP_DEBUG = true[APP]DEFAULT_TIMEZONE = Asia/Shanghai[DATABASE]TYPE = mysqlHOSTNAME = 127.0.0.1DATABASE = apiUSERNAME = rootPASSWORD = lirootHOSTPORT = 3306CHARSET = utf8DEBUG = true[LANG]default_lang = zh-cn
+APP_DEBUG = true[APP]DEFAULT_TIMEZONE = Asia/Shanghai[DATABASE]TYPE = mysqlHOSTNAME = 127.0.0.1DATABASE = apiUSERNAME = rootPASSWORD = lirootHOSTPORT = 3306CHARSET = utf8DEBUG = true[LANG]default_lang    =   zh-cnJWT_SECRET      =   FEWUFSANCSLD136SDVDFC
