--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "topthink/framework": "^6.0.0",
         "topthink/think-orm": "^2.0",
         "hg/apidoc": "^2.4",
-        "topthink/think-view": "^1.0"
+        "topthink/think-view": "^1.0",
+        "firebase/php-jwt": "^5.2"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
