--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "topthink/think-orm": "^2.0",
         "hg/apidoc": "^2.4",
         "topthink/think-view": "^1.0",
-        "firebase/php-jwt": "^5.2"
+        "firebase/php-jwt": "^5.2",
+        "endroid/qr-code": "^3.5"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
